# mini_compiler

./: .gitignore  CMakeLists.txt  README.md
backend/: ast.hpp  compiler.hpp  lexer.hpp  main.cpp  parser.hpp  vm.hpp
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  types.ts
